2010-08-18  Jessie Berlin  <jberlin@apple.com>

Reviewed by Adam Roben.

        Bug 44180 - WebView::paint fails to paint a child WebView of a Layered Window.
        https://bugs.webkit.org/show_bug.cgi?id=44180

        Decide to end painting if the m_backingStoreBitmap is null after the call to
        ensureBackingStore() instead of when the rcPaint rect filled by BeginPaint is empty.
        The rcPaint rect filled by BeginPaint is always empty for a child WebView of a Layered
        Window, even if GetUpdateRect and GetUpdateRgn report a non-empty region that needs
        painting.

        * WebView.cpp:
        (WebView::paint):


Canonical link: https://commits.webkit.org/56401@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65618 268f45cc-cd09-0410-ab3c-d52691b4dbfc