WebKit/win/WebView.cpp
@@ -977,7 +977,8 @@ void WebView::paint(HDC dc, LPARAM options)
         windowsToPaint = PaintWebViewAndChildren;
     }
 
-    if (::IsRectEmpty(&rcPaint)) {
+    bool backingStoreCompletelyDirty = ensureBackingStore();
+    if (!m_backingStoreBitmap) {
         if (!dc)
             EndPaint(m_viewWindow, &ps);
         return;
@@ -986,7 +987,6 @@ void WebView::paint(HDC dc, LPARAM options)
     m_paintCount++;
 
     HDC bitmapDC = ::CreateCompatibleDC(hdc);
-    bool backingStoreCompletelyDirty = ensureBackingStore();
     ::SelectObject(bitmapDC, m_backingStoreBitmap->handle());
 
     // Update our backing store if needed.
